<?xml version="1.0"?>
<package format="3">
    <name>pointcloud_listener_node</name>
    <version>0.0.1</version>
    <description>ROS2 node which passes a pointcloud to Dynablox</description>
    <maintainer email="spiasecki@ethz.com">Stanislaw Piasecki</maintainer>
    <license>BSD</license>

    <buildtool_depend>ament_cmake</buildtool_depend>

    <depend>rclcpp</depend>
    <depend>sensor_msgs</depend>
    <depend>dynablox</depend>
    <depend>pcl_conversions</depend>
    <depend>pcl_ros</depend>

    <export>
        <build_type>ament_cmake</build_type>
    </export>
</package>
